# panda_moveit_config

./: CMakeLists.txt  blocks_poses_publisher.cpp  blocks_spawner.cpp  cylinder_spawner.cpp  package.xml
config/: chomp_planning.yaml  ompl_planning.yaml  panda_controllers.yaml  panda_gripper_controllers.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml
launch/: :wq  conveyor_camera_connected.launch  demo_gazebo_shapenet_scaled.launch  demo_gazebo_shapenet_scaled_camera_unconnected.launch  panda_conveyor_camera_connected.launch  panda_gazebo_moveit.launch  panda_shapenet_empty_camera_connected.launch  panda_shapenet_empty_camera_unconnected.launch  panda_sim.launch  panda_simple_camera_connected.launch  panda_simple_camera_unconnected.launch  sensor_manager.launch.xml  shapenet_conveyor_camera_connected.launch  shapenet_empty_camera_connected.launch  shapenet_empty_camera_unconnected.launch  simple_camera_connected.launch  simple_camera_unconnected.launch
src/: cube_spawner.py
urdf/: box.urdf  conveyor.urdf  conveyor_belt.urdf  readme.txt  red_cylinder.urdf
urdf/sdf/: conveyor_belt.sdf
